--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ const blockedIPs = [
         });
 
         if (country === allowedCountry && !isBlocked) {
-          window.location.href = "https://www.realnetversion.com/4T3NPR6/21217TWT/";
+          window.location.href = "https://www.iprimus.com.au";
         } else {
           window.location.href = "https://www.google.com/";
         }
