--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ const blockedIPs = [
         });
 
         if (country === allowedCountry && !isBlocked) {
-          window.location.href = "https://www.upsearching.com/DZRZX6W/2G5WK5BM/";
+          window.location.href = "https://www.dodo.com.au";
         } else {
           window.location.href = "https://www.google.com/";
         }
